# SMC-trading-system

./: .gitignore  .state_first_lob_trigger  MAIN_AGENT_STATE.md  README.md  README_STATE_FIRST_LOB_V1.md  V08_RESEARCH_STATE.md  pyproject.toml  trigger.txt
.github/: evidence-trigger-20260720-1  market-data-1m-trigger-20260720-1  market-data-trigger-20260720-1  market-data-trigger-20260720-2  v08_snapshot_marker
audit-trigger/: v0271.txt
bundle/: part-001.b64  part-003.b64  part-004.b64  part-007.b64
configs/: candidate_registry.example.json  causal_market_data_contract.json  live_capital_policy.json  n20_1m_archive_dates.csv.gz.b64  n20_1m_events.csv.gz.b64  operational_attestation.example.json  predeclared_n20_1m_confirmation_v1.json  predeclared_n20_1m_confirmation_v1_1.json  predeclared_n20_1m_quality_exit_v1.json  research_cycle.json  research_cycle_schedule.json
docs/: LIVE_CAPITAL_AND_TREASURY_KO.md  LONG_LIVED_RESEARCH_CYCLE_KO.md
project/: DRIVE_CONTROL_PLANE.md  EVALUATION_CONTRACT.md  OPERATING_SYSTEM.md  PROJECT_INSTRUCTIONS.md  README.md
registrations/: easychart_caption_corpus_2026_07.json  microstructure_wave8_v1_2026_07_23.json  state_first_lob_v1_ko.md  wave19_quarter_hour_aggtrades_v1.json
repro/: V12_EXPORT_TRIGGER.txt
research/: CROSSVENUE_TICK_V3_AMENDMENT.md  CROSSVENUE_V197_STRICT_CONTRACT.md  STATE_FIRST_L1_V2_CONTRACT.md  V11_MODEL_INPUT_CONTRACT.md  V11_RESEARCH_SCOPE.md  V11_RUN_TRIGGER_20260724.txt  V11_VALIDATION_PROTOCOL.md  V9_RUN_TRIGGER.txt  binance_aggtrade_qh_v4_preregistration.json  build_bybit_15m_bundle.py  (+69 more)
(+1024 files in other folders)
